<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/pause_or_go"
        android:orderInCategory="100"
        android:title="@string/menu_click_to_start"
        app:showAsAction="never" />
    <item
        android:id="@+id/reset"
        android:orderInCategory="100"
        android:title="@string/menu_click_to_reset"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/preview"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/enable_preview"
        app:showAsAction="never" />
    <item
        android:id="@+id/hard_mode"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/enable_hard_mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/cheat_mode"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/cheat_mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
